--- a/Task-6/styles.css
+++ b/Task-6/styles.css
@@ -11,5 +11,12 @@ body {
   height: 100vh;
   flex-direction: column;
   gap: 30px;
-  background: linear-gradient( #54a5ca, #6df1e0);
+  background: linear-gradient(#54a5ca, #6df1e0);
+}
+.color-box {
+  width: 400px;
+  height: 50px;
+  margin-top: 20px;
+  border: 2px solid #333;
+  border-radius: 8px;
 }
